[metadata]
name = pycombat
version = attr: pycombat.__version__
author = CoAxLab
author_email = jrasero.daparte@gmail.com
description = Python version of data harmonisation technique Combat 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoAxLab/pycombat
project_urls =
    Bug Tracker = https://github.com/CoAxLab/pycombat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    pycombat
python_requires = >=3.6
install_requires =
    numpy
    scikit_learn
